employeeservImplementation/src/main/java/com/paypal/bfs/test/employeeserv/error/EmployeeServException.java
package com.paypal.bfs.test.employeeserv.error;

public class EmployeeServException extends RuntimeException{
    public EmployeeServException(String exception) {
        super(exception);
    }
}
